<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>

    <groupId>com.neo4j</groupId>
    <artifactId>skemadok-parent</artifactId>
    <version>0.5.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>SkemaDok (parent)</name>
    <description>Neo4j schema analyser and documentation builder</description>

    <modules>
        <module>core</module>
        <module>collector</module>
        <module>app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <neo4j-driver.version>6.0.5</neo4j-driver.version>
        <picocli.version>4.7.6</picocli.version>
        <testcontainers.version>1.21.0</testcontainers.version>
        <node.version>v20.19.0</node.version>
        <npm.version>10.8.2</npm.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.neo4j</groupId>
                <artifactId>skemadok-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.neo4j.driver</groupId>
                <artifactId>neo4j-java-driver</artifactId>
                <version>${neo4j-driver.version}</version>
            </dependency>

            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>neo4j</artifactId>
                <version>${testcontainers.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${testcontainers.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>5.3.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.5.3</version>
                </plugin>
                <plugin>
                    <groupId>com.github.eirslett</groupId>
                    <artifactId>frontend-maven-plugin</artifactId>
                    <version>1.15.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
